<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="0dp">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shadow_gradient"
        android:paddingBottom="16dp"

    >

        <ImageView
            android:id="@+id/amazonLogo"
            android:layout_width="wrap_content"
            android:layout_height="42dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/amazon_logo"
            android:maxWidth="200dp"
            android:maxHeight="100dp"
            android:src="@drawable/amazon_logo" />
    </FrameLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:padding="16dp"
        android:background="@color/light_grey"
        >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in_to_zappos"
        android:layout_marginBottom="24dp"
        android:paddingHorizontal="16dp"

        />

    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        android:layout_marginTop="8dp"
        android:paddingHorizontal="16dp"

        />

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:layout_marginTop="8dp"
        android:paddingHorizontal="16dp"

        />

    <CheckBox
        android:id="@+id/showPasswordCheckBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/show_password"
        android:layout_marginTop="8dp"
        android:paddingHorizontal="16dp"

        />

        <CheckBox
            android:id="@+id/keepMeSignedInCheckBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/keep_me_signed_in"
            android:layout_marginTop="8dp"
            android:paddingHorizontal="16dp"

            />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/signInButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            android:textAllCaps="false"
            android:background="@drawable/button_flat"
        android:textColor="@android:color/black"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"/>

        />

    <TextView
        android:id="@+id/createAccountLink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_new_account"
        android:textColor="@color/link_color"
        android:layout_gravity="center"
        android:paddingHorizontal="16dp"
        />

    <TextView
        android:id="@+id/termsAndConditionsLink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/terms_conditions"
        android:textColor="@color/link_color"
        android:layout_gravity="center"
        android:paddingHorizontal="16dp"
        />

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:padding="16dp">

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:background="#4A4848"
                android:layout_marginEnd="8dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="New to Amazon?"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"/>

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:background="#4A4848"
                android:layout_marginStart="8dp"/>

        </LinearLayout>


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/createAccountButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Create a new Amazon account"
            android:textAllCaps="false"
            android:background="@drawable/button_flat"
            android:textColor="@android:color/black"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"/>

        />


        <TextView
            android:id="@+id/conditionsOfUse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Conditions of Use Privacy Notice"
            android:layout_gravity="center"

            android:layout_marginBottom="8dp"/>

        <TextView
            android:id="@+id/copyrightNotice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"


            android:text="© 1996-2017, Amazon.com, Inc. or its affiliates"/>
</LinearLayout>
</LinearLayout>